--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -7,44 +7,44 @@
 // Admin Bar - Icon (Front-End)
 
 #wpadminbar #wp-admin-bar-qazana_edit_page > .ab-item::before {
-  margin-top  : 5px;
-  content     : "\e800";
-  font-size   : 12px;
-  font-family : eicon;
+  margin-top: 5px;
+  content: '\e800';
+  font-size: 12px;
+  font-family: eicon;
 }
 
 .qazana {
   // Reset Style for some themes and browsers
-  hyphens : manual;
+  hyphens: manual;
 
   * {
     &,
     &:after,
     &:before {
-      box-sizing : border-box;
+      box-sizing: border-box;
     }
   }
 
   a {
-    box-shadow      : none;
-    text-decoration : none;
+    box-shadow: none;
+    text-decoration: none;
   }
 
   hr {
-    margin           : 0;
-    background-color : transparent;
+    margin: 0;
+    background-color: transparent;
   }
 
   img {
-    max-width     : 100%;
-    height        : auto;
-    border        : none;
-    border-radius : 0;
-    box-shadow    : none;
+    max-width: 100%;
+    height: auto;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
   }
 
   figure {
-    margin : 0;
+    margin: 0;
   }
   // Responsive Embed
 
@@ -52,54 +52,54 @@
   iframe,
   object,
   video {
-    margin      : 0;
-    max-width   : 100%;
-    width       : 100%;
-    line-height : 1;
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+    line-height: 1;
   }
 
   .qazana-custom-embed {
-    line-height : 0;
+    line-height: 0;
     // for google maps margin bottom
   }
   // Background Video
 
   .qazana-background-video-container {
-    position : absolute;
-    top      : 0;
-    left     : 0;
-    z-index  : $under-layer;
-    overflow : hidden;
-    width    : 100%;
-    height   : 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: $under-layer;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
   }
 
   .qazana-background-video {
-    position  : absolute;
-    top       : 50%;
-    left      : 50%;
-    z-index  : $ground-layer;
-    max-width : none;
-    transform : translateY(-50%) translateX(-50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: $ground-layer;
+    max-width: none;
+    transform: translateY(-50%) translateX(-50%);
   }
 
   .qazana-html5-video {
-    object-fit : cover;
+    object-fit: cover;
     // For HTML5 portrait video
   }
   // End Background Video
 
   .qazana-background-overlay {
-    position : absolute;
-    top      : 0;
-    left     : 0;
-    z-index  : $ground-layer;
-    width    : 100%;
-    height   : 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: $ground-layer;
+    width: 100%;
+    height: 100%;
   }
 
   .qazana-invisible {
-    visibility : hidden;
+    visibility: hidden;
   }
 }
 
@@ -107,45 +107,27 @@
 
 .qazana-align- {
   &center {
-    margin     : 0 auto;
-    text-align : center;
+    margin: 0 auto;
+    text-align: center;
 
     .qazana-wrapper {
-      margin : 0 auto;
-    }
-
-    .qazana-button {
-      width : auto;
+      margin: 0 auto;
     }
   }
 
   &right {
-    text-align : right;
+    text-align: right;
 
     .qazana-wrapper {
-      margin-left : auto;
-    }
-
-    .qazana-button {
-      width : auto;
+      margin-left: auto;
     }
   }
 
   &left {
-    text-align : left;
+    text-align: left;
 
     .qazana-wrapper {
-      margin-right : auto;
-    }
-
-    .qazana-button {
-      width : auto;
-    }
-  }
-
-  &justify {
-    .qazana-button {
-      width : 100%;
+      margin-right: auto;
     }
   }
 }
@@ -155,33 +137,15 @@
 @media (max-width: $screen-md-max) {
   .qazana-tablet-align- {
     &center {
-      text-align : center;
-
-      .qazana-button {
-        width : auto;
-      }
+      text-align: center;
     }
 
     &right {
-      text-align : right;
-
-      .qazana-button {
-        width : auto;
-      }
+      text-align: right;
     }
 
     &left {
-      text-align : left;
-
-      .qazana-button {
-        width : auto;
-      }
-    }
-
-    &justify {
-      .qazana-button {
-        width : 100%;
-      }
+      text-align: left;
     }
   }
 }
@@ -191,33 +155,15 @@
 @media (max-width: $screen-sm-max) {
   .qazana-mobile-align- {
     &center {
-      text-align : center;
-
-      .qazana-button {
-        width : auto;
-      }
+      text-align: center;
     }
 
     &right {
-      text-align : right;
-
-      .qazana-button {
-        width : auto;
-      }
+      text-align: right;
     }
 
     &left {
-      text-align : left;
-
-      .qazana-button {
-        width : auto;
-      }
-    }
-
-    &justify {
-      .qazana-button {
-        width : 100%;
-      }
+      text-align: left;
     }
   }
 }
@@ -225,9 +171,9 @@
 // TEMP CODE
 
 #qazana-select-preset {
-  display : none;
+  display: none;
 }
 
 .qazana-widget-container {
-  width    : 100%;
+  width: 100%;
 }
