new piechart widget, counter title

--- a/assets/dev/scss/frontend/_widgets.scss
+++ b/assets/dev/scss/frontend/_widgets.scss
@@ -8,6 +8,7 @@
 @import "widgets/divider";
 @import "widgets/image-gallery";
 @import "widgets/counter";
+@import "widgets/piechart";
 @import "widgets/alert";
 @import "widgets/progress";
 @import "widgets/tabs";
