--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -890,6 +890,121 @@
   font-size: 14px;
   line-height: 1.5; }
 
+/*
+.qazana-piechart {
+  .qazana-piechart- {
+    &number- {
+      &prefix {
+        flex-grow: 1;
+        text-align: $end;
+      }
+
+      &suffix {
+        flex-grow: 1;
+        text-align: $start;
+      }
+    }
+
+  }
+}
+
+.qazana-piechart-number {
+  position: relative;
+  border: 1px solid grey;
+  border-radius: 50%;
+  text-align: center;
+
+  canvas {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .qazana-piechart-piechart-number {
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto;
+    margin-bottom: 22px;
+    width: 160px;
+    height: 160px;
+    line-height: 160px;
+  }
+}*/
+.qazana-piechart {
+  position: relative;
+  text-align: center; }
+  .qazana-piechart canvas {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    z-index: 1;
+    margin-bottom: 13px;
+    max-width: 100%;
+    -webkit-transform: rotateY(180deg) translateX(50%);
+            transform: rotateY(180deg) translateX(50%); }
+  .qazana-piechart-counterclockwise-yes canvas {
+    -webkit-transform: rotateY(0) translateX(-50%);
+            transform: rotateY(0) translateX(-50%); }
+  .qazana-piechart-title {
+    color: #666666;
+    text-align: center;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 2.5; }
+  .qazana-piechart-subtitle {
+    color: #666666;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.5; }
+  .qazana-piechart-number-progress {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    letter-spacing: -2px;
+    font-size: 35px; }
+    .qazana-piechart-number-progress-prefix {
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
+      text-align: left; }
+    .qazana-piechart-number-progress-suffix {
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
+      text-align: right;
+      font-size: 70%; }
+  .qazana-piechart .piechart-number {
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto;
+    margin-bottom: 22px;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    line-height: 160px; }
+    .qazana-piechart .piechart-number:before {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      border: 1px solid grey;
+      border-radius: inherit;
+      content: ''; }
+    .qazana-piechart .piechart-number > * {
+      line-height: inherit; }
+
 .qazana-alert {
   padding: 15px;
   border-left: 5px solid transparent;
