piechart defaults, improved skin widget wrapper, improved performance using array_flip vs array_unique,  buttons color fix

--- a/assets/dev/scss/frontend/widgets/button.scss
+++ b/assets/dev/scss/frontend/widgets/button.scss
@@ -156,8 +156,8 @@
       }
 
       &danger .qazana-button-content-wrapper {
-        border-color: $warning;
-        background-color: $warning;
+        border-color: $danger;
+        background-color: $danger;
       }
 
       &clear .qazana-button-content-wrapper {
