--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -797,8 +797,8 @@
   border-color: #f0ad4e;
   background-color: #f0ad4e; }
 .qazana-widget.qazana-button-danger .qazana-button-content-wrapper {
-  border-color: #f0ad4e;
-  background-color: #f0ad4e; }
+  border-color: #d9534f;
+  background-color: #d9534f; }
 .qazana-widget.qazana-button-clear .qazana-button-content-wrapper {
   padding: 0;
   border: none;
